# smart2

./: .gitignore  CMakeLists.txt  README copy.md  README.md  pass.txt  simplified_architecture.fodg
.github/: problem_matcher.json
.github/workflows/: android_test.yml  main_cmake.yml  visual_studio_console.yml  wasm.yml  windows_clang.yml
AndroidCanLang/: gradle.properties  release.jks
AndroidCanLang/app/: build.gradle
AndroidCanLang/app/src/main/cpp/: CMakeLists.txt
AndroidCanLang/app/src/main/cpp/cpu_features/: LICENSE
AndroidCanLang/app/src/main/cpp/cpu_features/include/: cpuinfo_x86.h
AndroidCanLang/app/src/main/cpp/cpu_features/src/: hwcaps.c
AndroidCanLang/app/src/main/java/org/rokist/canlangtest/: MainActivity.kt  MyApp.kt  SharedModel.kt  TestEntry.kt  TestEntryFragment.kt  TestListFragment.kt  TestParser.kt  TestRunner.kt
AndroidCanLang/app/src/main/res/drawable/: list_item_background.xml
AndroidCanLang/app/src/main/res/layout/: fragment_tab_code.xml  fragment_tab_log.xml  fragment_test_entry.xml  list_group_item.xml
AndroidCanLang/app/src/main/res/menu/: action_menu.xml
AndroidCanLang/app/src/main/res/navigation/: main_nav.xml
CoreTestApp/CoreTestApp/: cpptest.hpp
CoreTestApp/CoreTestApp.xcodeproj/: project.pbxproj
llvm_ir_test/: lib.c  lib.cpp  lib.h  lib.ll
lsp_vscode_server/: CMakeLists.txt  README.md  lsp_main.cpp  lsp_main.h  package.json  test.txt
lsp_vscode_server/client/src/: extension.ts
lsp_vscode_server/server/src/: server.ts
lsp_vscode_server/syntaxes/: smartlang.tmLanguage.json
other_projects/AndroidCanLang/: build.gradle  build.gradle.kts  settings.gradle
other_projects/AndroidCanLang/app/: build.gradle  build.gradle.kts
other_projects/AndroidCanLang/app/src/androidTest/java/org/rokist/canlangtest/: ExampleInstrumentedTest.kt
other_projects/AndroidCanLang/app/src/main/: AndroidManifest.xml
other_projects/AndroidCanLang/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
other_projects/AndroidCanLang/app/src/main/cpp/cpu_features/ndk_compat/: cpu-features.h
other_projects/AndroidCanLang/app/src/main/java/org/rokist/canlangtest/: MyApp.kt  SharedModel.kt  TestEntry.kt  TestEntryFragment.kt  TestListFragment.kt  TestParser.kt
other_projects/AndroidCanLang/app/src/main/res/layout/: activity_main.xml  fragment_test_list.xml  list_item.xml
other_projects/AndroidCanLang/app/src/main/res/raw/: testlist.json
other_projects/AndroidCanLang/app/src/main/res/values/: strings.xml  styles.xml
other_projects/AndroidCanLang/gradle/wrapper/: gradle-wrapper.properties
other_projects/CoreTestApp/CoreTestApp/: AppDelegate.h  AppDelegate.m  DetailViewController.h  DetailViewController.m  MasterViewController.hh  MasterViewController.mm  cpptest.cpp  main.m
other_projects/CoreTestApp/CoreTestApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
other_projects/CoreTestApp/CoreTestApp/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
other_projects/llvm_ir_test/: build.sh  hello.cpp  main.cpp
other_projects/test_vscode_vsix/smartlang/: CHANGELOG.md  package.json  vsc-extension-quickstart.md
other_projects/visual_studio_console_sln/: NewLang.sln  testClass.smt  test_1.playlist
other_projects/visual_studio_console_sln/CSharpConsoleApp/: SimpleAdd1Wasm.cs
other_projects/visual_studio_console_sln/ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters
other_projects/visual_studio_console_sln/RunSampleA/: RunSampleA.vcxproj
other_projects/visual_studio_console_sln/RunSampleB/: RunSampleB.cpp  RunSampleB.vcxproj  RunSampleB.vcxproj.filters
other_projects/visual_studio_console_sln/Sample-Test2/: Sample-Test2.vcxproj  Sample-Test2.vcxproj.filters
other_projects/visual_studio_console_sln/ScriptLangImpl/: ScriptLangImpl.cpp  ScriptLangImpl.vcxproj
other_projects/visual_studio_console_sln/StaticLib1/: StaticLib1.vcxproj  StaticLib1.vcxproj.filters
other_projects/wasm_project/: gulpfile.js  makefile  subwasm.cpp  test.html  undefined.syms  wasm.cpp
other_projects/wasm_project_test/: package.json  puppeteer.js
rust/: Cargo.toml
rust/adder/: Cargo.toml
rust/src/: lib.rs  main.rs
scripts/: AndroidStudio_Visual_Studio_Dark_Custom_Theme.icls  alt_cmake.js  gulpfile.js  package.json
src/: CMakeLists.txt  code_nodes.hpp  common.hpp  errors.hpp  main.cpp  thread_pool.cpp  thread_pool.hpp  utils.cpp
src/LSP_server/: LSPLocalServer.cpp  LSPLocalServer.hpp  LSPMain.cpp  LSPMain.hpp
src/codenodes/: AssignStatement.cpp  ClassNode.cpp  Document.cpp  EndOfFileNode.cpp  FuncNode.cpp  JsonArrayNode.cpp  JsonObjectStruct.cpp  LineBreak.cpp  NameNode.cpp  NumberNode.cpp  ReturnStatement.cpp  SimpleTextNode.cpp  StringLiteralNode.cpp  SymbolNode.cpp  TypeNode.cpp  code_nodes.cpp  coding_operations.cpp
src/include/: code_nodes.hpp  parse_util.hpp  script_runtime.hpp
src/script_runtime/: script_runtime.cpp
test_vscode_vsix/smartlang/: README.md
test_vscode_vsix/smartlang/syntaxes/: smartlang.tmLanguage.json
tests/: CMakeLists.txt  test.cpp  test.h  test_common.h  testlib_impl.cpp  testlib_impl.hpp
tests/DebugSample/: runSampleA.cpp
tests/google_tests/: coding_operation_tests.cpp  cplusplus_test.cpp  parser_test.cpp  script_runtime_test.cpp  speed_test.cpp  syntax_error_tests.cpp  tokenizers_test.cpp
tests/long_running/: CMakeLists.txt  long_running.cpp  long_running.h
visual_studio_console_sln/: testClass.smt
visual_studio_console_sln/ConsoleApplication2/: ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters  Native.asm.txt
visual_studio_console_sln/Sample-Test2/: Sample-Test2.vcxproj  Sample-Test2.vcxproj.filters
visual_studio_console_sln/ScriptLangImpl/: ScriptLangImpl.vcxproj  ScriptLangImpl.vcxproj.filters
visual_studio_console_sln/StaticLib1/: StaticLib1.vcxproj  StaticLib1.vcxproj.filters
wasm_project/: gulpfile.js  package.json  subwasm.cpp  test.html  wasm.cpp  wasm_build.sh
wasm_project_test/: package-lock.json  package.json  puppeteer.js
(+1 files in other folders)
